--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.21+8
   font_awesome_flutter: ^8.2.0
+  google_maps_webservice: ^0.0.16
 
 dev_dependencies:
   flutter_test:
