--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   async: ^2.3.0
   provider: ^3.0.0
   intl: ^0.15.8
+  masked_text: ^0.0.6
+
  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,6 +37,7 @@ dev_dependencies:
     sdk: flutter
     
   http: ^0.12.0+2
+
 
 
 # For information on the generic Dart part of this file, see the
